# RottenBot_Frontend

./: .dockerignore  .env  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/rottenbot_frontend/: __init__.py  app.py  config.py
src/rottenbot_frontend/utils/: __init__.py  get_login_page.py  get_main_page.py  get_predict_page.py  get_signup_page.py
