[project]
name = "rottenbot-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "niels-2005", email = "niels.scholz01@web.de" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
rottenbot-frontend = "rottenbot_frontend:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
