[project]
name = "rottenbot-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "niels-2005", email = "niels.scholz01@web.de" }
]
requires-python = "==3.11.13"
dependencies = [
    "streamlit>=1.50.0",
    "requests>=2.25.0",
    "pydantic-settings>=2.11.0",
]
